--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.13"
+    "eslint-config-next": "13.4.13",
+    "postcss": "^8.4.27",
+    "prisma": "^5.1.1",
+    "tailwindcss": "^3.3.3"
   }
 }
